<resources>
    <string name="app_name">Limelight</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="new_to_limelight">New to Limelight?</string>
    <string name="or_string_caps">OR</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="register_lowercase">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="splash_image_desc">Limelight Logo</string>
    <string name="back_button_desc">Back Button</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="enter_valid_pass">Enter a valid password</string>
    <string name="pass_mismatch">The passwords do not match</string>
    <string name="pass_length_err">Password must contain 6 or more characters</string>

    <string name="tab_1">For You</string>
    <string name="tab_2">Headlines</string>
    <string name="tab_3">Analyze</string>
    <string name="tab_4">Profile</string>

    <string name="color_blue">#2196F3</string>
    <string name="color_black">#000</string>

    <string name="article_thumbnail">Article Thumbnail</string>
    <string name="classify_article">ANALYZE ARTICLE</string>
    <string name="enter_url">Enter URL</string>
    <string name="view_in_browser">View in Browser</string>
    <string name="share">Share</string>
    <string name="analyze">Analyze</string>

    <string name="your_profile">YOUR PROFILE</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="logout">Logout</string>
    <string name="following">Following</string>
    <string name="topics">TOPICS</string>
    <string name="search_topic">Search Topic</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="clickbait">CLICKBAIT</string>
    <string name="sentiment">SENTIMENT</string>
    <string name="writing_style">WRITING STYLE</string>
    <string name="fact_checking">FACT CHECKING</string>
    <string name="close">CLOSE</string>
    <string name="classification_results">ANALYSIS RESULTS</string>
    <string name="main_activity">Main Activity</string>
    <string name="search_button_desc">Search Button</string>
    <string name="suggested_topics">Suggested Topics</string>
    <string name="source_placeholder">SOME SOURCE</string>
    <string name="click_to_follow">Keywords (Click to Follow)</string>

    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
</resources>
