<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <item
        android:id="@+id/menu_analyze"
        android:icon="@drawable/vector_logo"
        android:orderInCategory="100"
        android:title="@string/analyze"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_option"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_open_browser"
        android:icon="@drawable/ic_back_black"
        android:orderInCategory="200"
        android:title="@string/view_in_browser"

        app:showAsAction="never" />

</menu>