<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center|center_vertical"
        android:text="@string/your_profile"
        android:textColor="@color/black"
        android:textSize="30sp"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/manageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileTitle"
        android:layout_margin="18dp"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/manage_profile"
        android:textColor="@color/color_blue"
        android:textSize="15sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/logoutButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manageHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"

        android:gravity="center"
        android:padding="15dp"
        android:text="@string/logout"
        android:textSize="16sp"
        app:icon="@drawable/ic_logout"
        app:iconGravity="textStart"
        app:iconPadding="20dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoutButton">

        <TextView
            android:id="@+id/yourFollowsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:gravity="start"
            android:padding="5dp"
            android:text="@string/following"
            android:textColor="@color/color_blue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/followsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/yourFollowsHeader"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:divider="@color/color_grey"
            android:dividerHeight="1dp"
            android:footerDividersEnabled="false">


        </ListView>


    </RelativeLayout>

</RelativeLayout>