<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/parentLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/animate"
        android:fitsSystemWindows="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_back_chevron"
            android:scaleType="fitCenter"
            android:contentDescription="@string/back_button_desc" />

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/register_lowercase"
            android:textColor="@color/color_white"
            android:textSize="40sp"
            android:textStyle="bold"

            />


        <RelativeLayout
            android:id="@+id/userDetailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerTitle">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/round_edit_text"
                android:paddingTop="5dp"
                android:paddingBottom="17dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/usernameErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameWrapper"
                android:textColor="@color/color_white"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:text="@string/enter_valid_email"
                />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usernameErrorText"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/round_edit_text"
                android:paddingTop="5dp"
                android:paddingBottom="17dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmPasswordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordWrapper"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_edit_text"
                android:paddingTop="5dp"
                android:paddingBottom="17dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@null"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/passwordErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirmPasswordWrapper"
                android:textColor="@color/color_white"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:text="@string/enter_valid_pass"
                />

                <Button
                    android:id="@+id/userRegisterButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passwordErrorText"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/round_button"
                    android:padding="10dp"
                    android:text="@string/register"
                    android:textStyle="bold" />



        </RelativeLayout>

    </RelativeLayout>
</ScrollView>







