<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp">


    <TextView
        android:id="@+id/topicsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center|center_vertical"
        android:text="@string/topics"
        android:textColor="@color/black"
        android:textSize="30sp"

        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/addTopicLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topicsTitle"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/topicInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:hint="@string/search_topic"
            android:textColorHint="@color/black"

            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchString"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:padding="20dp"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/topicSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="0"
            android:background="@drawable/button_round"
            android:paddingStart="15dp"
            android:paddingTop="19dp"
            android:paddingEnd="15dp"
            android:paddingBottom="19dp"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/search_button_desc" />
    </LinearLayout>

    <TextView
        android:id="@+id/suggested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addTopicLayout"
        android:layout_margin="18dp"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/suggested_topics"
        android:textColor="@color/color_blue"
        android:textSize="15sp"
        android:textStyle="bold" />


    <ListView
        android:id="@+id/catListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/suggested"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:divider="@color/color_grey"
        android:dividerHeight="1dp"
        android:footerDividersEnabled="false">


    </ListView>


</RelativeLayout>