<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/classifyHeader"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/classify_article"
            android:gravity="center|center_vertical"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/classifyTitle"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/classifyTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_url"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="3dp"
            android:textColorHint="@color/black"
            android:layout_margin="20dp"
            android:id="@+id/classifyInputLayout"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:textColorHint="@color/black"
                android:maxLines="1"
                android:inputType="textUri"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/classifyInputLayout"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/analyze"
            android:textSize="16sp"
            android:padding="15dp"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_analyze"
            />


    </RelativeLayout>

</RelativeLayout>