<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

        <LinearLayout
            android:id="@+id/clickBaitChartLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintEnd_toStartOf="@id/sentimentChartLayout"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/clickBaitChart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.75" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/clickbait"
                android:textColor="@color/color_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sentimentChartLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toEndOf="@id/clickBaitChartLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/sentimentChart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.75" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/sentiment"
                android:textColor="@color/color_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/writingChartLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clickBaitChartLayout"
            app:layout_constraintWidth_percent="0.5">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/writingChart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.75" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/writing_style"
                android:textColor="@color/color_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/factCheckChartLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toEndOf="@+id/writingChartLayout"
            app:layout_constraintTop_toBottomOf="@+id/sentimentChartLayout"
            app:layout_constraintWidth_percent="0.5">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/factCheckChart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.75" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/fact_checking"
                android:textColor="@color/color_black" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>

